# FLAMEGPU2-model-template-cpp

./: CMakeLists.txt  README.md
cmake/: flamegpu2.cmake
src/: main.cu
